<resources>
    <string name="app_name">Foosball</string>
    <string name="action_logout">Logout</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="button_create_account">Create Account</string>
    <string name="link_to_login">Already a member? Login</string>
    <string name="logout">Logout</string>
    <string name="foosball_image_content_description">Foosball Image</string>
    <string name="action_player_list">Player List</string>
    <string name="yellow">Yellow</string>
    <string name="play_as_black">PLAY AS BLACK</string>
    <string name="playing_as_black">PLAYING AS BLACK</string>
    <string name="play_as_yellow">PLAY AS YELLOW</string>
    <string name="playing_as_yellow">PLAYING AS YELLOW</string>
    <string name="waiting_for_opponent">waiting for opponent…</string>
    <string name="cancel_x">X</string>
    <string-array
        name="score_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>
