<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/charcoal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/play_as_black"
                android:layout_width="@dimen/staging_button_width"
                android:layout_height="@dimen/staging_button_height"
                android:layout_gravity="center"
                android:background="#555"
                android:padding="16dp"
                android:text="@string/play_as_black"
                android:visibility="gone"/>

            <Button
                android:id="@+id/cancel_black"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/staging_button_height"
                android:layout_gravity="center"
                android:background="#555"
                android:text="@string/cancel_x"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@color/colorAccent">

            <Button
                android:id="@+id/play_as_yellow"
                android:layout_width="@dimen/staging_button_width"
                android:layout_height="@dimen/staging_button_height"
                android:layout_gravity="center"
                android:background="@color/colorAccentLight"
                android:padding="16dp"
                android:text="@string/play_as_yellow"
                android:visibility="gone"/>
            <Button
                android:id="@+id/cancel_yellow"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorAccentLight"
                android:layout_height="@dimen/staging_button_height"
                android:text="@string/cancel_x"
                android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>